--- a/views/claims.ejs
+++ b/views/claims.ejs
@@ -136,6 +136,12 @@ create claims, edit and resolve claims, email techs any questions about claims, 
 <script type=text/javascript>
   function addFilterCustomer(ele) {
     fetch('https://ejs-views-practice.glitch.me/claims/filter/customer/'+ele.text)
+    .then(function(response) {
+    return "claims",{claims:response.data})
+    })
+    .catch(function(error) {
+      console.log(error);
+    }); 
     document.getElementById('create').style.display="block";
     var button = document.createElement('button');
     button.innerHTML = ele.text;
