--- a/views/claims.ejs
+++ b/views/claims.ejs
@@ -143,10 +143,23 @@ create claims, edit and resolve claims, email techs any questions about claims, 
 .then(response => {
 
     console.log(response)
-
+    result = JSON.parse(response);
+    fetch('https://ejs-views-practice.glitch.me/claims/redirect/', {
+        headers:{
+          "content-type":"application/json",
+        },
+        body: JSON.stringify({
+          customer: result.customer
+        }),
+        method: 'POST'
+    }).then(resp=>{
+           // window.location.reload();//so changes render
+        }, err=>{
+          console.log(err);
+        })
 
       // console.log(JSON.parse(data))
-      window.location.href = ("/claims/redirect/"+response) //redirect
+      // window.location.href = ("/claims/redirect/"{body}) //redirect
 
     })
     .catch(function(error) {
