--- a/views/claims.ejs
+++ b/views/claims.ejs
@@ -143,13 +143,12 @@ create claims, edit and resolve claims, email techs any questions about claims, 
 .then(response => {
 
     console.log(response)
-    result = JSON.parse(response);
     fetch('https://ejs-views-practice.glitch.me/claims/redirect/', {
         headers:{
           "content-type":"application/json",
         },
         body: JSON.stringify({
-          customer: result.customer
+          customer: response
         }),
         method: 'POST'
     }).then(resp=>{
