🏃🏦 Checkpoint ./routes/views.js:10221761/255 ./views/claims.ejs:10221761/563

--- a/views/claims.ejs
+++ b/views/claims.ejs
@@ -1,6 +1,10 @@
 <!-- SORTABLE, FILTERABLE LIST OF ALL CLAIMS  -->
 
 <%- include("partials/header") %>
+<% if (locals.claimsRedirect) { %>
+<%=claimsRedirect[0].productid%>
+
+<%}%>
 <% if (locals.claims) { %> 
 <h1>
   Claims
