🏯🏖 Checkpoint ./views/claims.ejs:10221761/1276

--- a/views/claims.ejs
+++ b/views/claims.ejs
@@ -2,9 +2,7 @@
 
 <%- include("partials/header") %>
 <% if (locals.claims) { %> 
-<div>
-<%-createGrid(locals.claims)  %>
-</div>
+
 <div id="myGrid" style="height: 600px;width:500px;" class="ag-theme-balham"></div>
 
 
@@ -135,6 +133,9 @@ create claims, edit and resolve claims, filter and sort claims
 
 
 <script type=text/javascript>
+  window.onload = function(){
+    createGrid({});
+  }
   function addFilterCustomer(ele) {
           var rows = document.getElementsByTagName("tr").length
           for (var i = 1; i< rows; i++){
@@ -223,7 +224,30 @@ create claims, edit and resolve claims, filter and sort claims
 
   
   function createGrid(data){
-    console.log("fuck");
+    var columnDefs = [
+      {headerName: "Make", field: "make"},
+      {headerName: "Model", field: "model"},
+      {headerName: "Price", field: "price"}
+    ];
+
+    // specify the data
+    var rowData = [
+      {make: "Toyota", model: "Celica", price: 35000, sortable:true},
+      {make: "Ford", model: "Mondeo", price: 32000, sortable:true},
+      {make: "Porsche", model: "Boxter", price: 72000, sortable:true}
+    ];
+
+    // let the grid know which columns and what data to use
+    var gridOptions = {
+      columnDefs: columnDefs,
+      rowData: rowData
+    };
+
+  // lookup the container we want the Grid to use
+  var eGridDiv = document.querySelector('#myGrid');
+
+  // create the grid passing in the div to use together with the columns & data we want to use
+  new agGrid.Grid(eGridDiv, gridOptions);
   }
 </script>
 
