--- a/views/claims.ejs
+++ b/views/claims.ejs
@@ -218,9 +218,8 @@ create claims, edit and resolve claims, filter and sort claims
   
   function sort(column, direction){
     console.log("sort");
-    let rowsOG = document.getElementsByTagName("tbody");
-    rowsOG = [].slice.call(rows);
-    rowCopy = Obect.assign({}, rows);
+    let rows = document.getElementsByTagName("tbody");
+    rows = [].slice.call(rows);
     rows.sort(function(a,b){
       return a.rows[0].cells[1].innerText.localeCompare(b.rows[0].cells[1].innerText);
     });
@@ -233,15 +232,20 @@ create claims, edit and resolve claims, filter and sort claims
     // for (var i=2; i<rows.length; i++){
     // document.getElementsByTagName("thead")[0].appendChild(rows[i].style.display="contents")
     // }
-              for (var i=1; i<rows.length; i++){
-        for (var j=1; j<rows[i].cells.length;j++){
-                  document.getElementsByTagName("tr")[i+1].cells[j].innerText=rows[i].cells[j].innerText
-        }
-      } 
-    // let delete = document.getElementsByTagName("tbody");
-    // for(row in delete){
-    //   row.remove()
-    // }
+      //         for (var i=1; i<rows.length; i++){
+      //   for (var j=1; j<rows[i].cells.length;j++){
+      //             document.getElementsByTagName("tr")[i+1].cells[j].innerText=rows[i].cells[j].innerText
+      //   }
+      // } 
+    let table = document.getElementById("tbody");
+    let blep = document.getElementsByTagName("tbody");
+    while (blep.length >0){
+      blep[0].parentNode.removeChild(blep[0]);
+    }
+
+    for(let k =0; k < rows.length; k++){
+      
+    }
   }
 </script>
 
